[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/spacepixels-0.2.0/asteroid_grey.png" type="Texture" id=1]
[ext_resource path="res://Meteor/Meteor.gd" type="Script" id=2]
[ext_resource path="res://Music/Classic Arcade SFX/Explosions/Explosion.wav" type="AudioStream" id=3]

[node name="Meteor" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )
minSpeed = 50.0
maxSpeed = 80.0
maxRotationRate = 20.0

[node name="MeteorDMG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -21.849

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -14, -34, 4, -35, 5, -18, 22, -15, 34, -5, 35, 16, 16, 16, 16, 24, 5, 25, 5, 34, -15, 35, -16, 26, -36, 26, -35, -14, -15, -16 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.999998, 0.500005 )
scale = Vector2( 3.7, 3.85 )

[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Meteor_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
